@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2023 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
 package org.thingsboard.server.transport.mqtt.session;
 
 import io.netty.handler.codec.mqtt.MqttQoS;
+import lombok.ToString;
 import org.thingsboard.server.common.transport.session.DeviceAwareSessionContext;
 
 import java.util.List;
@@ -24,9 +25,7 @@ import java.util.UUID;
 import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
 
-/**
- * Created by ashvayka on 30.08.18.
- */
+@ToString(callSuper = true)
 public abstract class MqttDeviceAwareSessionContext extends DeviceAwareSessionContext {
 
     private final ConcurrentMap<MqttTopicMatcher, Integer> mqttQoSMap;
@@ -45,7 +44,7 @@ public abstract class MqttDeviceAwareSessionContext extends DeviceAwareSessionCo
                 .stream()
                 .filter(entry -> entry.getKey().matches(topic))
                 .map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
         if (!qosList.isEmpty()) {
             return MqttQoS.valueOf(qosList.get(0));
         } else {
