@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2023 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,15 +20,18 @@ import com.google.common.util.concurrent.ListenableFuture;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonParser;
 import com.google.gson.JsonPrimitive;
-import lombok.extern.slf4j.Slf4j;
+import jakarta.annotation.Nullable;
+import org.checkerframework.checker.nullness.qual.NonNull;
 import org.thingsboard.common.util.DonAsynchron;
+import org.thingsboard.rule.engine.api.AttributesDeleteRequest;
+import org.thingsboard.rule.engine.api.AttributesSaveRequest;
 import org.thingsboard.rule.engine.api.EmptyNodeConfiguration;
 import org.thingsboard.rule.engine.api.RuleNode;
 import org.thingsboard.rule.engine.api.TbContext;
 import org.thingsboard.rule.engine.api.TbNode;
 import org.thingsboard.rule.engine.api.TbNodeConfiguration;
-import org.thingsboard.rule.engine.api.TbNodeException;
-import org.thingsboard.rule.engine.api.util.TbNodeUtils;
+import org.thingsboard.server.common.adaptor.JsonConverter;
+import org.thingsboard.server.common.data.AttributeScope;
 import org.thingsboard.server.common.data.DataConstants;
 import org.thingsboard.server.common.data.EntityView;
 import org.thingsboard.server.common.data.kv.AttributeKvEntry;
@@ -36,12 +39,9 @@ import org.thingsboard.server.common.data.objects.AttributesEntityView;
 import org.thingsboard.server.common.data.plugin.ComponentType;
 import org.thingsboard.server.common.data.util.CollectionsUtil;
 import org.thingsboard.server.common.msg.TbMsg;
-import org.thingsboard.server.common.transport.adaptor.JsonConverter;
 
-import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 import static org.thingsboard.server.common.data.msg.TbMsgType.ACTIVITY_EVENT;
@@ -51,7 +51,6 @@ import static org.thingsboard.server.common.data.msg.TbMsgType.INACTIVITY_EVENT;
 import static org.thingsboard.server.common.data.msg.TbMsgType.POST_ATTRIBUTES_REQUEST;
 import static org.thingsboard.server.common.data.msg.TbNodeConnectionType.SUCCESS;
 
-@Slf4j
 @RuleNode(
         type = ComponentType.ACTION,
         name = "copy to view",
@@ -60,18 +59,14 @@ import static org.thingsboard.server.common.data.msg.TbNodeConnectionType.SUCCES
         nodeDetails = "Copy attributes from asset/device to related entity view according to entity view configuration. \n " +
                 "Copy will be done only for attributes that are between start and end dates and according to attribute keys configuration. \n" +
                 "Changes message originator to related entity view and produces new messages according to count of updated entity views",
-        uiResources = {"static/rulenode/rulenode-core-config.js"},
         configDirective = "tbNodeEmptyConfig",
-        icon = "content_copy"
+        icon = "content_copy",
+        docUrl = "https://thingsboard.io/docs/user-guide/rule-engine-2-0/nodes/action/copy-to-view/"
 )
 public class TbCopyAttributesToEntityViewNode implements TbNode {
 
-    EmptyNodeConfiguration config;
-
     @Override
-    public void init(TbContext ctx, TbNodeConfiguration configuration) throws TbNodeException {
-        this.config = TbNodeUtils.convert(configuration, EmptyNodeConfiguration.class);
-    }
+    public void init(TbContext ctx, TbNodeConfiguration configuration) {}
 
     @Override
     public void onMsg(TbContext ctx, TbMsg msg) {
@@ -79,8 +74,8 @@ public class TbCopyAttributesToEntityViewNode implements TbNode {
                 ACTIVITY_EVENT, INACTIVITY_EVENT, POST_ATTRIBUTES_REQUEST)) {
             if (!msg.getMetaData().getData().isEmpty()) {
                 long now = System.currentTimeMillis();
-                String scope = msg.isTypeOf(POST_ATTRIBUTES_REQUEST) ?
-                        DataConstants.CLIENT_SCOPE : msg.getMetaData().getValue(DataConstants.SCOPE);
+                AttributeScope scope = msg.isTypeOf(POST_ATTRIBUTES_REQUEST) ?
+                        AttributeScope.CLIENT_SCOPE : AttributeScope.valueOf(msg.getMetaData().getValue(DataConstants.SCOPE));
 
                 ListenableFuture<List<EntityView>> entityViewsFuture =
                         ctx.getEntityViewService().findEntityViewsByTenantIdAndEntityIdAsync(ctx.getTenantId(), msg.getOriginator());
@@ -104,15 +99,24 @@ public class TbCopyAttributesToEntityViewNode implements TbNode {
                                         List<String> filteredAttributes =
                                                 attributes.stream().filter(attr -> attributeContainsInEntityView(scope, attr, entityView)).collect(Collectors.toList());
                                         if (!filteredAttributes.isEmpty()) {
-                                            ctx.getTelemetryService().deleteAndNotify(ctx.getTenantId(), entityView.getId(), scope, filteredAttributes,
-                                                    getFutureCallback(ctx, msg, entityView));
+                                            ctx.getTelemetryService().deleteAttributes(AttributesDeleteRequest.builder()
+                                                    .tenantId(ctx.getTenantId())
+                                                    .entityId(entityView.getId())
+                                                    .scope(scope)
+                                                    .keys(filteredAttributes)
+                                                    .callback(getFutureCallback(ctx, msg, entityView))
+                                                    .build());
                                         }
                                     } else {
-                                        Set<AttributeKvEntry> attributes = JsonConverter.convertToAttributes(JsonParser.parseString(msg.getData()));
-                                        List<AttributeKvEntry> filteredAttributes =
-                                                attributes.stream().filter(attr -> attributeContainsInEntityView(scope, attr.getKey(), entityView)).collect(Collectors.toList());
-                                        ctx.getTelemetryService().saveAndNotify(ctx.getTenantId(), entityView.getId(), scope, filteredAttributes,
-                                                getFutureCallback(ctx, msg, entityView));
+                                        List<AttributeKvEntry> attributes = JsonConverter.convertToAttributes(JsonParser.parseString(msg.getData())).stream()
+                                                .filter(attr -> attributeContainsInEntityView(scope, attr.getKey(), entityView)).toList();
+                                        ctx.getTelemetryService().saveAttributes(AttributesSaveRequest.builder()
+                                                .tenantId(ctx.getTenantId())
+                                                .entityId(entityView.getId())
+                                                .scope(scope)
+                                                .entries(attributes)
+                                                .callback(getFutureCallback(ctx, msg, entityView))
+                                                .build());
                                     }
                                 }
                             }
@@ -128,14 +132,14 @@ public class TbCopyAttributesToEntityViewNode implements TbNode {
     }
 
     private FutureCallback<Void> getFutureCallback(TbContext ctx, TbMsg msg, EntityView entityView) {
-        return new FutureCallback<Void>() {
+        return new FutureCallback<>() {
             @Override
             public void onSuccess(@Nullable Void result) {
                 transformAndTellNext(ctx, msg, entityView);
             }
 
             @Override
-            public void onFailure(Throwable t) {
+            public void onFailure(@NonNull Throwable t) {
                 ctx.tellFailure(msg, t);
             }
         };
@@ -145,20 +149,13 @@ public class TbCopyAttributesToEntityViewNode implements TbNode {
         ctx.enqueueForTellNext(ctx.newMsg(msg.getQueueName(), msg.getType(), entityView.getId(), msg.getCustomerId(), msg.getMetaData(), msg.getData()), SUCCESS);
     }
 
-    private boolean attributeContainsInEntityView(String scope, String attrKey, EntityView entityView) {
+    private boolean attributeContainsInEntityView(AttributeScope scope, String attrKey, EntityView entityView) {
         AttributesEntityView attributesEntityView = entityView.getKeys().getAttributes();
-        List<String> keys = null;
-        switch (scope) {
-            case DataConstants.CLIENT_SCOPE:
-                keys = attributesEntityView.getCs();
-                break;
-            case DataConstants.SERVER_SCOPE:
-                keys = attributesEntityView.getSs();
-                break;
-            case DataConstants.SHARED_SCOPE:
-                keys = attributesEntityView.getSh();
-                break;
-        }
+        List<String> keys = switch (scope) {
+            case CLIENT_SCOPE -> attributesEntityView.getCs();
+            case SERVER_SCOPE -> attributesEntityView.getSs();
+            case SHARED_SCOPE -> attributesEntityView.getSh();
+        };
         return CollectionsUtil.contains(keys, attrKey);
     }
 
